--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -31,17 +31,12 @@
             <h2>Credits</h2>
             <p>${credits}</p>
         </div>
-        <div class="row edit-timestamps">
-            <div class="col m6">
-                Created by
-                <a route-href="route: account; params.bind: {id: submittedById}">${submittedByName}</a>
-                on ${submittedDate}
-            </div>
-            <div class="col m6" if.bind="editedByName">
-                Lasted Edited by
-                <a route-href="route: account; params.bind: {id: editedById}">${editedByName}</a>
-                ${submittedDate}
-            </div>
+        <div class="row _alignRight">
+            Created by
+            <a route-href="route: account; params.bind: {id: submittedById}">
+                <user-display name.bind="submittedByName" unit-id.bind="submittedByUnitId"></user-display>
+            </a>
+            on ${editedDate}
         </div>
     </div>
 </template>
