Removing socket references.

--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <fieldset>
-                <legend>Units and Sockets</legend>
+                <legend>Units</legend>
                 <div class="form-group _alignCenter">
                     <team-display team.two-way="teamUnits" editable="true"></team-display>
                     <ship-display ship-id.two-way="shipId" editable="true"></ship-display>
@@ -31,7 +31,6 @@
                         <i class="fa fa-fw fa-cloud-download"></i>
                         Import from OPTC-DB
                     </button>
-                    <socket-picker sockets.two-way="teamSockets"></socket-picker>
                 </div>
             </fieldset>
         </div>
