Redoing the static page css.

--- a/Source/TreasureGuide.Web/Views/Account/AccessDenied.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/AccessDenied.cshtml
@@ -3,6 +3,7 @@
 }
 
 <header>
-    <h1 class="red-text">Access Denied.</h1>
+    <h1 class="error-text">Access Denied.</h1>
     <p>You do not have access to this resource.</p>
+    <a href="/" class="button _primary">Return Home</a>
 </header>
