--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -3,6 +3,7 @@
 }
 
 <header>
-    <h2>@ViewData["Title"]</h2>
-    <p class="red-text">Unsuccessful login with service. Please try again!</p>
+    <h2 class="error-text">@ViewData["Title"]</h2>
+    <p>Unsuccessful login with service. Please try again!</p>
+    <a href="/" class="button _primary">Return Home</a>
 </header>
