Fixing some CSS issues.

--- a/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
@@ -12,6 +12,7 @@
     <title>Nakama Network</title>
 </head>
 <body>
+    @{ Html.RenderPartial("_CssPartial"); }
     @RenderSection("Scripts", required: false)
 
     <div class="login-wrapper">
