--- a/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
@@ -1,9 +1,4 @@
-﻿<!-- Style Sheets-->
-<link rel="stylesheet" href="~/css/site.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-<!-- Icons -->
+﻿<!-- Icons -->
 <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="~/content/icons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="~/content/icons/apple-icon-72x72.png">
