--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <title>Nakama Network</title>
 </head>
 <body>
+    @{ Html.RenderPartial("_CssPartial"); }
     @{ Html.RenderPartial("_AuthExportPartial"); }
     <div class="hiddendiv"></div>
 
@@ -22,7 +23,7 @@
                 }
             </style>
         </div>
-        <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
     </div>
+    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 </body>
 </html>
