Working on the scoring system.

--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -3,7 +3,7 @@
 }
 
 <header>
-    <h2 class="error-text">@ViewData["Title"]</h2>
+    <h2 class="danger-text">@ViewData["Title"]</h2>
     <p>Unsuccessful login with service. Please try again!</p>
     <a href="/" class="button _primary">Return Home</a>
 </header>
