Voting now implemented.

--- a/Source/TreasureGuide.Web/src/css/_variables.scss
+++ b/Source/TreasureGuide.Web/src/css/_variables.scss
@@ -14,6 +14,7 @@ $medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
 $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
 
 // Colors
+$white-color: #FFFFFF;
 $background-color: #FFFFFF;
 $primary-color: #0B6C6C;
 $light-color: #9E9E9E;
@@ -23,3 +24,4 @@ $success-color: #76A811;
 $warning-color: #B45C13;
 $active-color: #6E6E6E;
 $info-color: #183579;
+$black-color: #000000;
