--- a/Source/TreasureGuide.Web/src/views/error.html
+++ b/Source/TreasureGuide.Web/src/views/error.html
@@ -1,6 +1,6 @@
 ﻿<template>
-    <h1>${title}</h1>
-    <div class="flow-text">
-        <p>${message}</p>
-    </div>
+    <h1 class="_dangerText">${title}</h1>
+    <p>
+        ${message}
+    </p>
 </template>
