--- a/Source/TreasureGuide.Web/Views/Account/Lockout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Lockout.cshtml
@@ -3,7 +3,7 @@
 }
 
 <header>
-    <h1 class="danger-text">@ViewData["Title"]</h1>
+    <h1 class="_dangerText">@ViewData["Title"]</h1>
     <p>This account has been locked out, please try again later.</p>
     <a href="/" class="button _primary">Return Home</a>
 </header>
