--- a/Source/TreasureGuide.Web/Views/Account/Login.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Login.cshtml
@@ -11,9 +11,12 @@
     @{
         var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
         <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="_width100 _alignCenter">
-            @foreach (var provider in loginProviders)
+            @foreach (var provider in loginProviders.OrderBy(x => x.DisplayName))
             {
-                <button type="submit" class="button _primary _large" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+                <button type="submit" class="button _primary _large" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">
+                    <i class="fa fa-fw fa-@provider.AuthenticationScheme.ToLower()"></i>
+                    @provider.DisplayName
+                </button>
             }
         </form>
     }
