--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -1,3 +1,21 @@
 ﻿<template>
-    <h1>${title}</h1>
+    <div class="jumbo _info">
+        <h1>Nakama Network</h1>
+        <hr />
+        <h4>
+            Welcome to Nakama Network!
+        </h4>
+        <p>
+            Here you can browse, search, rate, and submit teams and guides for
+            <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise</a>.
+        </p>
+        <p>
+            If you'd like to submit your own team or rate a team, simply <a href="/Account/Login">register</a> with a social media account. No passwords required!
+        </p>
+        <hr />
+        <p>
+            Special thanks to the folks at <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> whose constant
+            effort to document all the units and stages in this game power this tool.
+        </p>
+    </div>
 </template>
