Updating loading stuff.

--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -13,13 +13,16 @@
 
     <div class="aurelia-wrapper" aurelia-app="main">
         <div class="preloader">
-            <i class="fa fa-circle-o-notch fa-spin fa-fw fa-5x"></i>
-            <h1>Loading...</h1>
+            <h1>
+                <i class="fa fa-circle-o-notch fa-spin fa-fw fa-3x"></i>
+                <p>Loading...</p>
+            </h1>
             <style>
                 .preloader {
                     text-align: center;
                     font-family: sans-serif;
-                    margin-top: 25%;
+                    margin-top: 15%;
+                    line-height: 2em;
                 }
             </style>
         </div>
