--- a/Source/TreasureGuide.Web/src/views/account/edit.html
+++ b/Source/TreasureGuide.Web/src/views/account/edit.html
@@ -14,7 +14,7 @@
                     <div class="form-group">
                         <label for="globalInput">
                             <input id="globalInput" type="checkbox" checked.bind="global" />
-                            Global
+                            <span class="-label-body">Global</span>
                         </label>
                     </div>
 
