--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -168,6 +168,15 @@ team-box {
         margin-top: -10px;
         margin-right: -5px;
     }
+
+    .deleted {
+        background-color: lighten($danger-color, 50) !important;
+        opacity: 0.4;
+    }
+
+    .reported {
+        background-color: lighten($warning-color, 50);
+    }
 }
 
 .score-container {
